--- a/showroom.html
+++ b/showroom.html
@@ -83,7 +83,7 @@
 					<div class="col-xs-12 col-sm-4">
 						<div class="item-storeIntro">
 							<a href="#">
-								<img src="./Test2-main/images/showroom/121002120_1111951002536534_1257493184770801225_n.png">
+								<img src="./Test2-main/images/showroom/121002120_1111951002536534_1257493184770801225_n.png" height="165px" width="300px">
 							</a>
 							<span class="title-storeIntro">KHÔNG GIAN THỜI TRANG VÀ HIỆN ĐẠI</span>
 						</div>
@@ -97,7 +97,7 @@
 						</div>
 					</div>  
 					<div class="col-xs-12 col-sm-4">
-						<div class="#">
+						<div class="item-storeIntro">
 							<a href="/blogs/he-thong-cua-hang">
 								<img src="./Test2-main/images/showroom/242941090_623006532416457_7150966435110887981_n.png">
 							</a>
